@@ -27,7 +27,7 @@ pkginclude_HEADERS =  protein-geometry.hh read-sbase.hh lbg-graph.hh srs-interfa
 
 pkgincludedir = $(includedir)/coot/geometry
 
-INCLUDES = -I$(top_srcdir) \
+AM_CPPFLAGS = -I$(top_srcdir) \
 	 $(CLIPPER_CXXFLAGS) $(CCP4SRS_CXXFLAGS) $(MMDB_CXXFLAGS)
 
 AM_CXXFLAGS = \
