@@ -18,7 +18,7 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
 # 02110-1301, USA
 
-INCLUDES = \
+AM_CPPFLAGS = \
 	-I$(top_srcdir)
 
 AM_CXXFLAGS = $(COOT_WINDOWS_CFLAGS) \
